--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zz-common/call-app",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "转转FE打包模版",
   "scripts": {
     "dist": "commander-tools run dist",
@@ -25,7 +25,7 @@
   "author": "luoxue <luoxue@zhuanzhuan.com>",
   "license": "ISC",
   "devDependencies": {
-    "@zz-base/commander-tools": "^1.0.3"
+    "@zz-common/commander-tools": "^1.0.5"
   },
   "peerDependencies": {},
   "dependencies": {}
