--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zz-common/call-app",
-  "version": "2.1.2",
+  "version": "2.1.3",
   "description": "转转FE打包模版",
   "scripts": {
     "dist": "commander-tools run dist",
@@ -14,8 +14,7 @@
     "doc-upload": "commander-tools run doc-upload",
     "build-doc": "commander-tools run build-doc"
   },
-  "main": "lib/index.js",
-  "module": "es/index.js",
+  "main": "index.js",
   "keywords": [
     "vue",
     "react",
