--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zz-common/call-app",
-  "version": "2.2.1-beta.3",
+  "version": "2.2.2",
   "description": "转转FE打包模版",
   "scripts": {
     "dist": "commander-tools run dist",
