--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@zz-common/call-app",
-  "version": "3.1.2",
+  "version": "3.2.0",
   "description": "通用的唤起app的库",
   "scripts": {
     "dist": "commander-tools run dist",
-    "compile": "commander-tools run compile",
     "dev": "commander-tools run dev",
-    "build": "commander-tools run compile && commander-tools run dist && commander-tools run build-doc",
+    "compile": "commander-tools run compile-es && commander-tools run compile-lib",
+    "build": "npm run compile && commander-tools run dist && commander-tools run build-doc",
     "pub": "commander-tools run pub",
     "pub-beta": "commander-tools run pub-beta",
     "unpub": "commander-tools run unpub",
