--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zz-common/call-app",
-  "version": "3.2.0",
+  "version": "3.2.1-beta.1",
   "description": "通用的唤起app的库",
   "scripts": {
     "dist": "commander-tools run dist",
