--- a/package.json
+++ b/package.json
@@ -41,13 +41,19 @@
     }
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@zz-common/commander-tools": "^3.1.2-beta.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.5.0",
     "eslint-plugin-html": "^6.0.2",
-    "husky": "^4.2.5"
+    "husky": "^4.2.5",
+    "@types/node": "^14.14.34",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "typescript": "^3.9.5",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-unicorn": "^20.1.0"
   },
   "peerDependencies": {},
   "dependencies": {
