--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.3.0-beta.15",
   "description": "通用的唤起app的库",
   "scripts": {
+    "ts-check": "tsc --noEmit",
     "cz": "git cz -a",
     "test": "jest --coverage",
     "lint": "commander-tools run lint",
