--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,26 @@
 {
   "compilerOptions": {
-    /* 基本选项 */
-    "target": "es6", // 指定 ECMAScript 目标版本: 'ES3' (default), 'ES5', 'ES6'/'ES2015', 'ES2016', 'ES2017', or 'ESNEXT'
-    "module": "system", // 指定使用模块: 'commonjs', 'amd', 'system', 'umd' or 'es2015'
-    "lib": [], // 指定要包含在编译中的库文件
-    "allowJs": true, // 允许编译 javascript 文件
-    "checkJs": true, // 报告 javascript 文件中的错误
-    "jsx": "preserve", // 指定 jsx 代码的生成: 'preserve', 'react-native', or 'react'
-    "declaration": true, // 生成相应的 '.d.ts' 文件
-    "sourceMap": false, // 生成相应的 '.map' 文件
+    "noEmit": true,
+    "outDir": "build/dist",
+    "baseUrl": ".",
+    "module": "esnext",
+    "target": "es2016",
+    "lib": ["esnext", "dom"],
+    "sourceMap": false,
+    "jsx": "preserve",
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "removeComments": true, // 删除编译后的所有的注释
-    "noEmit": true, // 不生成输出文件
-    "importHelpers": true, // 从 tslib 导入辅助工具函数
-    /* 严格的类型检查选项 */
-    "strict": true, // 启用所有严格类型检查选项
-    "noImplicitAny": true, // 在表达式和声明上有隐含的 any类型时报错
-    "strictNullChecks": true, // 启用严格的 null 检查
-    "noImplicitThis": true, // 当 this 表达式值为 any 类型的时候，生成一个错误
-    "alwaysStrict": true, // 以严格模式检查每个模块，并在每个文件里加入 'use strict'
-    /* 额外的检查 */
-    "noUnusedLocals": true, // 有未使用的变量时，抛出错误
-    "noUnusedParameters": true, // 有未使用的参数时，抛出错误
-    "noImplicitReturns": true, // 并不是所有函数里的代码都有返回值时，抛出错误
-    "noFallthroughCasesInSwitch": true // 报告 switch 语句的 fallthrough 错误。（即，不允许 switch 的 case 语句贯穿）
+    "forceConsistentCasingInFileNames": true,
+    "useDefineForClassFields": false,
+    "esModuleInterop": true,
+    "noImplicitReturns": true,
+    "removeComments": false,
+    "noUnusedLocals": true,
+    "allowJs": false,
+    "strict": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src", "types"],
   "exclude": ["node_modules"]
