--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "通用的唤起app的库",
   "scripts": {
     "ts-check": "tsc --noEmit",
+    "declare-type": "tsc --emitDeclarationOnly",
     "prettier": "prettier -c --write \"**/*\"",
     "lint-staged:js": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx ./src",
-    "lint-check": "npm run ts-check && npm run lint-staged:js",
+    "lint-check": "npm run lint-staged:js & npm run ts-check",
     "cz": "git cz -a",
     "test": "jest --coverage",
     "lint": "commander-tools run lint",
@@ -17,7 +18,7 @@
     "compile": "commander-tools run compile",
     "dist": "commander-tools run dist",
     "analyz": "commander-tools run dist --analyz",
-    "build": "commander-tools run build",
+    "build": "commander-tools run build & npm run declare-type",
     "pub": "commander-tools run pub",
     "pub-beta": "commander-tools run pub-beta",
     "unpub": "commander-tools run unpub",
@@ -27,7 +28,7 @@
   },
   "main": "lib/index.js",
   "module": "es/index.js",
-  "typings": "types/index.d.ts",
+  "typings": "types/dist/",
   "keywords": [
     "vue",
     "react",
