--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zz-common/call-app",
-  "version": "4.0.0-beta.15",
+  "version": "4.0.1",
   "description": "通用的唤起app的库",
   "scripts": {
     "ts-check": "tsc --noEmit",
