--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
-    "@zz-common/commander-tools": "^3.1.2-beta.2",
+    "zz-commander-tools": "^1.1.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
