--- a/package.json
+++ b/package.json
@@ -37,15 +37,9 @@
   ],
   "author": "huangjiaxing <huangjiaxing@zhuanzhuan.com>",
   "license": "ISC",
-  "config": {
-    "commitizen": {
-      "path": "@zz-common/commander-tools/lib/config/commitizen.config"
-    }
-  },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commander-tools run commitlint"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
@@ -59,7 +53,7 @@
     "@types/node": "^14.14.34",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
-    "zz-commander-tools": "^1.1.0",
+    "zz-commander-tools": "^1.1.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
